--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
-    "picnic": "~4.1.1"
+    "picnic": "~4.1.1",
+    "moment": ">= 2.8.0",
+    "moment-timezone": ">= 0.1.0"
   },
   "resolutions": {
     "ember": "2.2.0"
