--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "qunit": "~1.20.0",
     "picnic": "~4.1.1",
     "moment": ">= 2.8.0",
-    "moment-timezone": ">= 0.1.0"
+    "moment-timezone": ">= 0.1.0",
+    "hammerjs": "~2.0.4",
+    "matchMedia": "0.2.0"
   },
   "resolutions": {
     "ember": "2.2.0"
