--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,12 @@
     "moment": ">= 2.8.0",
     "moment-timezone": ">= 0.1.0",
     "hammerjs": "~2.0.4",
-    "matchMedia": "0.2.0"
+    "matchMedia": "0.2.0",
+    "d3": "~3.5.3",
+    "lodash": "~3.10.0",
+    "antiscroll": "git://github.com/Addepar/antiscroll#e0d1538cf4f3fd61c5bedd6168df86d651f125da",
+    "jquery-mousewheel": "~3.1.4",
+    "jquery-ui": "~1.11.4"
   },
   "resolutions": {
     "ember": "2.2.0"
